k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: account
  template:
    metadata:
      labels:
        component: account
    spec:
      # initContainers:
      #   - name: init-postgres
      #     image: busybox:1.28
      #     command: ['sh', '-c', "until nslookup myservice.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for postgres-service; sleep 2; done"]
      #   - name: init-rabbitmq
      #     image: busybox:1.28
      #     command: ['sh', '-c', "until nslookup myservice.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for rabbitmq-service; sleep 2; done"]
      #   - name: init-redis
      #     image: busybox:1.28
      #     command: ['sh', '-c', "until nslookup myservice.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for redis-service; sleep 2; done"]
      restartPolicy: always  
      containers:
        - name: account
          image: gcr.io/gateway-282214/account
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
