k8s/notify-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: notify-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: notify
  template:
    metadata:
      label:
        component: notify
    spec:
      containers:
        - name: notify
          image: gcr.io/gateway-282214/notify
          port: 
            - containerPort: 8081
