k8s/postgres-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: postgres
  template:
    metadata:
      label:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          port: 
            - containerPort: 5432
