k8s/rebbitmq-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: rabbitmq
  template:
    metadata:
      label:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3
          port: 
            - containerPort: 5672
