k8s/redis-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: redis
  template:
    metadata:
      label:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          port: 
            - containerPort: 6379
