k8s/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: ClusterIP
  selector:
    component: account
  ports:
    - port: 8080
      targetPort: 8080
