k8s/notify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify-service
spec:
  type: ClusterIP
  selector:
    component: notify
  ports:
    - port: 8081
      targetPort: 8081
